--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build Hugo site
 
 on:
   push:
-    branches: [ master, content ]
+    branches: [ master, content, static_files ]
   pull_request:
-    branches: [ master, content ]
+    branches: [ master, content, static_files ]
   workflow_dispatch:
     inputs:
       logLevel:
@@ -29,7 +29,7 @@ jobs:
       uses: jitterbit/get-changed-files@v1
     - name: Update submodules
       id: update_submods
-      if: ${{ steps.changed-files.conclusion == 'skipped' || !contains(steps.changed-files.outputs.all, 'content') }}
+      if: ${{ steps.changed-files.conclusion == 'skipped' || (!contains(steps.changed-files.outputs.all, 'content') && !contains(steps.changed-files.outputs.all, 'static'))}}
       run: |
         set -o xtrace
         echo "=====${{ steps.changed-files.outputs.all}}======"
