--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           core.setOutput('count', changed_files.length.toString())
     - name: Update submodules
       id: update_submods
-      if: ${{ steps.filter_changed_files.conclusion == 'skipped' || steps.filter_changed_files.outputs.count != "0"}}
+      if: ${{ steps.filter_changed_files.conclusion == 'skipped' || steps.filter_changed_files.outputs.count != '0'}}
       run: |
         set -o xtrace
         echo "=====${{ steps.changed-files.outputs.all}}======"
