--- a/data/sidebars/kAvya_sidebar.yml
+++ b/data/sidebars/kAvya_sidebar.yml
@@ -55,6 +55,8 @@ contents:
         url: ../bhAShAntaram/
       - title: English Lit
         url: ../english/
+      - title: Book pub
+        url: ../book-pub
   - title: Vishvas's home page
     url: ../
 
